--- a/app/src/main/res/layout/fragment_notes_admin_ui.xml
+++ b/app/src/main/res/layout/fragment_notes_admin_ui.xml
@@ -51,18 +51,19 @@
             android:layout_marginTop="30dp"
             android:text="@string/notes"
             />
+
         <TextView
             android:id="@+id/admin_note_course_title"
-            android:layout_width="match_parent"
+            android:layout_width="355dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="67dp"
+            android:inputType="textMultiLine"
+            android:text="Big Data Course"
             android:textColor="@color/white"
             android:textSize="19sp"
-            android:textStyle="bold"
-            android:text="Big Data Course"
-            android:layout_marginTop="67dp"
-            android:layout_marginStart="25dp"
 
-             />
+            android:textStyle="bold" />
 
     </FrameLayout>
 
