--- a/app/src/main/res/layout/item_mycourse.xml
+++ b/app/src/main/res/layout/item_mycourse.xml
@@ -10,13 +10,13 @@
 
     <TextView
         android:id="@+id/item_request_name"
-        android:layout_width="wrap_content"
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
+        android:inputType="textMultiLine|textCapSentences"
         android:text="Big Data"
         android:textColor="@color/yellow"
-        android:textSize="20sp"
+        android:textSize="18sp"
         android:textStyle="bold"
-        android:inputType="textCapSentences"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.08"
@@ -58,10 +58,10 @@
 
     <TextView
         android:id="@+id/item_status_textview"
-        android:inputType="textCapSentences"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="88dp"
+        android:inputType="textCapSentences"
         android:text="Status : "
         android:textColor="@color/blue"
         android:textSize="14sp"
@@ -75,34 +75,33 @@
 
     <TextView
         android:id="@+id/iteam_mycourse_status"
-        android:inputType="textCapSentences"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="14sp"
+        android:inputType="textCapSentences"
         android:text="Accepted"
         android:textColor="@color/blue"
         app:layout_constraintBottom_toBottomOf="@+id/item_status_textview"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.08"
+        app:layout_constraintHorizontal_bias="0.21"
         app:layout_constraintStart_toEndOf="@+id/item_status_textview"
         app:layout_constraintTop_toTopOf="@+id/item_status_textview" />
 
     <TextView
         android:id="@+id/iteam_mycourse_date"
         android:layout_width="wrap_content"
-        android:inputType="textCapSentences"
         android:layout_height="wrap_content"
+        android:inputType="textCapSentences"
         android:text="20 jan 2020"
         android:textColor="@color/blue"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/iteam_mycourse_place"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0
-"
-        app:layout_constraintStart_toStartOf="@+id/item_status_textview"
+        app:layout_constraintEnd_toEndOf="@+id/iteam_mycourse_status"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/item_mycourse_price"
         app:layout_constraintTop_toTopOf="@+id/item_request_name"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintVertical_bias="0.53999996" />
 
     <TextView
         android:id="@+id/item_mycourse_price"
